<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="horizontal"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.9"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@id/gl1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_signup"
            app:layout_constraintStart_toStartOf="@id/gl2"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:hint="@string/enter_username"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@color/edit_text"/>
        <TextView
            android:id="@+id/tv_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            app:layout_constraintStart_toStartOf="@id/gl2"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_phoneno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_no"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:hint="@string/enter_phone"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@color/edit_text"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_phoneno"
            app:layout_constraintStart_toStartOf="@id/gl2"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:hint="@string/enter_email"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@color/edit_text"/>
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@id/gl2"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:hint="@string/enter_password"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@color/edit_text"/>
        <TextView
            android:id="@+id/tv_confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintStart_toStartOf="@id/gl2"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_confirmPassword"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:hint="@string/confirm_password"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@color/edit_text"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_confirmPassword"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:text="@string/register"
            android:textSize="22dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_marginBottom="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3">
            <TextView
                android:id="@+id/tv_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_acount"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>