<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="horizontal"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.9"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/tvSignIn"
            app:layout_constraintTop_toBottomOf="@id/gl1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_email_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSignIn"
            app:layout_constraintStart_toStartOf="@id/gl2"
            android:text="@string/email_phone"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_email_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_email_phone"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:hint="@string/enter_email_phone"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@color/edit_text"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_email_phone"
            app:layout_constraintStart_toStartOf="@id/gl2"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:hint="@string/enter_password"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@color/edit_text"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <CheckBox
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:layout_constraintStart_toEndOf="@id/gl2"
            android:onClick="onCheckboxClicked"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:textSize="14dp"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cb"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:text="@string/login"
            android:textSize="22dp"/>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            app:layout_constraintStart_toEndOf="@id/gl2"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_sign_in_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            app:layout_constraintStart_toEndOf="@id/gl2"
            android:text="@string/sign_in_with"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_with"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3"
            android:layout_marginTop="20dp">
            <ImageView
                android:gravity="center"
                android:id="@+id/img_facebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_facebook"
                android:layout_marginRight="5dp"/>
            <ImageView
                android:gravity="center"
                android:id="@+id/img_gmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_gmail"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl2"
            app:layout_constraintEnd_toStartOf="@id/gl3">
            <TextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>